Finished the header

--- a/homePage.html
+++ b/homePage.html
@@ -7,18 +7,19 @@
     <link rel="stylesheet" href="homePage.css">
 </head>
 <body>
-    <nav class="barra-navegacao">
-        <div class="icon-container1">
-            <img src="./resources/icon.svg" class="icon1">
-            <h2>Beauty Bordados</h2>
+    <header class="cabecalho">
+        <div class="div-cabecalho1">
+            <img src="./resources/icon.svg" class="icone1">
+            <h2 class="sub-titulo">Beauty Bordados</h2>
         </div>
-        <div class="icon-container2">
-            <img src="./resources/icon-facebook.png" class="icon2"  width="30px">
-            <img src="./resources/icon-twitterx.png" class="icon2"  width="30px">
-            <img src="./resources/icon-youtube.png" class="icon2"   width="30px">
-            <img src="./resources/icon-instagram.png" class="icon2" width="30px">
+        <div class="div-cabecalho2">
+            <img src="./resources/icon-facebook.png" class="icone2"  width="30px">
+            <img src="./resources/icon-twitterx.png" class="icone2"  width="30px">
+            <img src="./resources/icon-youtube.png" class="icone2"   width="30px">
+            <img src="./resources/icon-instagram.png" class="icone2" width="30px">
         </div>
-    </nav>
+    </header>
+    <!--
     <div class="principal">
         <section class="secao1">
             <div>
@@ -79,5 +80,6 @@
     <footer class="cabecalho">
 
     </footer>
+    -->
 </body>
 </html>
